==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

v6.2.1 [wip]
. (kfsone) "buy" now shows average cost if you specify --detail (-v)
. (kfsone) "sell" now shows average value if you specify --detail (-v)
. (kfsone) Fixed item name matching (--avoid)
. (kfsone) Fixed use of via in "run"
. (kfsone) Exposed cache.regeneratePricesFile()
. (kfsone) Call regeneratePricesFile() after calling plugin.finish()
. (kfsone) General code cleanup (removed buildLinks and loadTrades)
. (kfsone) Added VisualStudio pyproj (great for performance analysis)

v6.2.0 Dec 11 2014
. (kfsone) Added plugin system for "import", added a maddavo plugin.
. (kfsone) "-G" is now the default for "update"
. (kfsone) "--capacity" and "--ly-per" are now required "run" arguments
. (kfsone) "local --ly=0" now works as expected
. (kfsone) Tell the user when we rebulid the cache (-q to silence)
. (gulasch) Stations and distances
. (kfsone) Mineral and Microbial are now in the correct order,
. (kfsone) Big documentation cleanup,
. (mhuges) Added '--stations' to 'nav' to show a station count,
. (kfsone) Added '--ages' option to 'local' to show price data age,

v6.1.8 Dec 09 2014
. (kfsone) Huge performance improvement to "nav",
. (kfsone) Performance improvement to "run",
. (kfsone) #79 support for "--avoid" in the "nav" command,
. (kfsone) Download counter to "import", use -q to silence it,
. (kfsone) Fixed case-sensitivity matching station names that changed,
. (kfsone) 60 new stations,
. (kfsone) "update -G" now takes "-wx" and "-wy" arguments for setting the
  position of the GUI window. Try -wx=-220 -wy=220,
. (kfsone) Updated config.sh and tdupd to take advantage of -wx and -wy
. (eggplant) More stations and distances,

v6.1.7 Dec 07 2014
. (kfsone) Added "scripts" directory with bash scripts
  See scripts/README.txt