@@ -3,6 +3,7 @@ TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
 ==============================================================================
 
 v6.2.1 [wip]
+. (kfsone) "buy" and "sell" --near now checks the station/system too
 . (kfsone) "buy" now shows average cost if you specify --detail (-v)
 . (kfsone) "sell" now shows average value if you specify --detail (-v)
 . (kfsone) Fixed item name matching (--avoid)
